--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 optionsContainer.innerHTML = '';
                 
                 if (option.action === 'redirect') {
-                    const salesPageUrl = 'https://noskillsensi.github.io/';
+                    const salesPageUrl = 'http://pv.noskillsensi.com.br/';
                     
                     // Pega todos os parâmetros da URL ATUAL (que estão corretos)
                     const currentUrlParams = window.location.search;
@@ -222,3 +222,4 @@
     </script>
 </body>
 </html>
+
