--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           type: 'bot',
           message: `<div class="aspect-video rounded-lg overflow-hidden">
             <iframe class="w-full h-full"
-              src="https://www.youtube.com/embed/21u-rBZ6mAE?autoplay=1&mute=1&loop=1&playlist=21u-rBZ6mAE&controls=0&showinfo=0&rel=0&modestbranding=1"
+              src="https://www.youtube.com/embed/21u-rBZ6mAE?autoplay=1&loop=1&playlist=21u-rBZ6mAE&controls=0&showinfo=0&rel=0&modestbranding=1"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
@@ -242,3 +242,4 @@
   </script>
 </body>
 </html>
+
