--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-  <!-- CÓDIGO DO PIXEL UTMIFY -->
+  <!-- 🔥 PIXEL UTMIFY PADRÃO -->
   <script>
     window.pixelId = "687c11e3a04e4348ef2a8d8d";
     var a = document.createElement("script");
@@ -18,7 +18,17 @@
     document.head.appendChild(a);
   </script>
 
-  <!-- SCRIPT UTM UTMIFY -->
+  <!-- 🔥 PIXEL GOOGLE (UTMIFY) -->
+  <script>
+    window.googlePixelId = "69694a3ee889f2888a5533d8";
+    var g = document.createElement("script");
+    g.setAttribute("async", "");
+    g.setAttribute("defer", "");
+    g.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel-google.js");
+    document.head.appendChild(g);
+  </script>
+
+  <!-- 🔗 CAPTURA DE UTMs -->
   <script src="https://cdn.utmify.com.br/scripts/utms/latest.js" async defer></script>
 
   <style>
@@ -242,4 +252,5 @@
   </script>
 </body>
 </html>
+
 
